crates/compiler/parser/tests/snapshots/parameterized__expressions::array_indexing_parameterized_ok.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 ---
fn test() { arr[0]; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                IndexAccess {
                                    array: Spanned(
                                        Identifier(
                                            Spanned(
                                                "arr",
                                                12..15,
                                            ),
                                        ),
                                        12..15,
                                    ),
                                    index: Spanned(
                                        Literal(
                                            0,
                                            None,
                                        ),
                                        16..17,
                                    ),
                                },
                                12..17,
                            ),
                        ),
                        12..19,
                    ),
                ],
            },
            0..21,
        ),
    ),
]
============================================================

--- Input 2 ---
fn test() { matrix[i][j]; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                IndexAccess {
                                    array: Spanned(
                                        IndexAccess {
                                            array: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "matrix",
                                                        12..18,
                                                    ),
                                                ),
                                                12..18,
                                            ),
                                            index: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "i",
                                                        19..20,
                                                    ),
                                                ),
                                                19..20,
                                            ),
                                        },
                                        12..20,
                                    ),
                                    index: Spanned(
                                        Identifier(
                                            Spanned(
                                                "j",
                                                22..23,
                                            ),
                                        ),
                                        22..23,
                                    ),
                                },
                                12..23,
                            ),
                        ),
                        12..25,
                    ),
                ],
            },
            0..27,
        ),
    ),
]
