crates/compiler/parser/tests/snapshots/parameterized__expressions::cast_expressions_parameterized_ok.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 ---
fn test() { x as felt; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Cast {
                                    expr: Spanned(
                                        Identifier(
                                            Spanned(
                                                "x",
                                                12..13,
                                            ),
                                        ),
                                        12..13,
                                    ),
                                    target_type: Spanned(
                                        Named(
                                            Spanned(
                                                Felt,
                                                17..21,
                                            ),
                                        ),
                                        17..21,
                                    ),
                                },
                                12..21,
                            ),
                        ),
                        12..22,
                    ),
                ],
            },
            0..24,
        ),
    ),
]
============================================================

--- Input 2 ---
fn test() { 42u32 as felt; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Cast {
                                    expr: Spanned(
                                        Literal(
                                            42,
                                            Some(
                                                "u32",
                                            ),
                                        ),
                                        12..17,
                                    ),
                                    target_type: Spanned(
                                        Named(
                                            Spanned(
                                                Felt,
                                                21..25,
                                            ),
                                        ),
                                        21..25,
                                    ),
                                },
                                12..25,
                            ),
                        ),
                        12..26,
                    ),
                ],
            },
            0..28,
        ),
    ),
]
============================================================

--- Input 3 ---
fn test() { (x + y) as felt; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Cast {
                                    expr: Spanned(
                                        BinaryOp {
                                            op: Add,
                                            left: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "x",
                                                        13..14,
                                                    ),
                                                ),
                                                13..14,
                                            ),
                                            right: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "y",
                                                        17..18,
                                                    ),
                                                ),
                                                17..18,
                                            ),
                                        },
                                        13..18,
                                    ),
                                    target_type: Spanned(
                                        Named(
                                            Spanned(
                                                Felt,
                                                23..27,
                                            ),
                                        ),
                                        23..27,
                                    ),
                                },
                                13..27,
                            ),
                        ),
                        12..28,
                    ),
                ],
            },
            0..30,
        ),
    ),
]
============================================================

--- Input 4 ---
fn test() { x + 5 as felt; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Cast {
                                    expr: Spanned(
                                        BinaryOp {
                                            op: Add,
                                            left: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "x",
                                                        12..13,
                                                    ),
                                                ),
                                                12..13,
                                            ),
                                            right: Spanned(
                                                Literal(
                                                    5,
                                                    None,
                                                ),
                                                16..17,
                                            ),
                                        },
                                        12..17,
                                    ),
                                    target_type: Spanned(
                                        Named(
                                            Spanned(
                                                Felt,
                                                21..25,
                                            ),
                                        ),
                                        21..25,
                                    ),
                                },
                                12..25,
                            ),
                        ),
                        12..26,
                    ),
                ],
            },
            0..28,
        ),
    ),
]
============================================================

--- Input 5 ---
fn test() { (x * 2u32) as felt; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Cast {
                                    expr: Spanned(
                                        BinaryOp {
                                            op: Mul,
                                            left: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "x",
                                                        13..14,
                                                    ),
                                                ),
                                                13..14,
                                            ),
                                            right: Spanned(
                                                Literal(
                                                    2,
                                                    Some(
                                                        "u32",
                                                    ),
                                                ),
                                                17..21,
                                            ),
                                        },
                                        13..21,
                                    ),
                                    target_type: Spanned(
                                        Named(
                                            Spanned(
                                                Felt,
                                                26..30,
                                            ),
                                        ),
                                        26..30,
                                    ),
                                },
                                13..30,
                            ),
                        ),
                        12..31,
                    ),
                ],
            },
            0..33,
        ),
    ),
]
============================================================

--- Input 6 ---
fn test() { arr[0] as felt; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Cast {
                                    expr: Spanned(
                                        IndexAccess {
                                            array: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "arr",
                                                        12..15,
                                                    ),
                                                ),
                                                12..15,
                                            ),
                                            index: Spanned(
                                                Literal(
                                                    0,
                                                    None,
                                                ),
                                                16..17,
                                            ),
                                        },
                                        12..17,
                                    ),
                                    target_type: Spanned(
                                        Named(
                                            Spanned(
                                                Felt,
                                                22..26,
                                            ),
                                        ),
                                        22..26,
                                    ),
                                },
                                12..26,
                            ),
                        ),
                        12..27,
                    ),
                ],
            },
            0..29,
        ),
    ),
]
============================================================

--- Input 7 ---
fn test() { point.x as felt; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Cast {
                                    expr: Spanned(
                                        MemberAccess {
                                            object: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "point",
                                                        12..17,
                                                    ),
                                                ),
                                                12..17,
                                            ),
                                            field: Spanned(
                                                "x",
                                                18..19,
                                            ),
                                        },
                                        12..19,
                                    ),
                                    target_type: Spanned(
                                        Named(
                                            Spanned(
                                                Felt,
                                                23..27,
                                            ),
                                        ),
                                        23..27,
                                    ),
                                },
                                12..27,
                            ),
                        ),
                        12..28,
                    ),
                ],
            },
            0..30,
        ),
    ),
]
============================================================

--- Input 8 ---
fn test() { x as felt as felt; }
--- AST ---
[
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    3..7,
                ),
                params: [],
                return_type: Spanned(
                    Tuple(
                        [],
                    ),
                    0..0,
                ),
                body: [
                    Spanned(
                        Expression(
                            Spanned(
                                Cast {
                                    expr: Spanned(
                                        Cast {
                                            expr: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "x",
                                                        12..13,
                                                    ),
                                                ),
                                                12..13,
                                            ),
                                            target_type: Spanned(
                                                Named(
                                                    Spanned(
                                                        Felt,
                                                        17..21,
                                                    ),
                                                ),
                                                17..21,
                                            ),
                                        },
                                        12..21,
                                    ),
                                    target_type: Spanned(
                                        Named(
                                            Spanned(
                                                Felt,
                                                25..29,
                                            ),
                                        ),
                                        25..29,
                                    ),
                                },
                                12..29,
                            ),
                        ),
                        12..30,
                    ),
                ],
            },
            0..32,
        ),
    ),
]
