crates/compiler/parser/tests/snapshots/parameterized__expressions::function_call_parameterized_err.snap
---
source: crates/compiler/parser/tests/common.rs
expression: snapshot
---
--- Input 1 (ERROR) ---
fn test() { foo(a, b; }
--- Diagnostics ---
[02] Error: found ';' expected '{', '(', '.', '[', '*', '/', '+', '-', '==', '!=', '<', '>', '<=', '>=', '&', '|', '^', '&&', '||', ',', or ')'
   ╭─[ test.cairo:1:21 ]
   │
 1 │ fn test() { foo(a, b; }
   │                     ┬  
   │                     ╰── found ';' expected '{', '(', '.', '[', '*', '/', '+', '-', '==', '!=', '<', '>', '<=', '>=', '&', '|', '^', '&&', '||', ',', or ')'
───╯

============================================================

--- Input 2 (ERROR) ---
fn test() { add(a: felt, b: u32, c: bool); }
--- Diagnostics ---
[02] Error: found ':' expected '{', '(', '.', '[', '*', '/', '+', '-', '==', '!=', '<', '>', '<=', '>=', '&', '|', '^', '&&', '||', ',', or ')'
   ╭─[ test.cairo:1:18 ]
   │
 1 │ fn test() { add(a: felt, b: u32, c: bool); }
   │                  ┬  
   │                  ╰── found ':' expected '{', '(', '.', '[', '*', '/', '+', '-', '==', '!=', '<', '>', '<=', '>=', '&', '|', '^', '&&', '||', ',', or ')'
───╯
